traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:4: error: not found: value setPose
        setPose(getX()+1,getY())
        ^TraversalByColumn:5: error: overloaded method value writeMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
        writeMessage()
        ^TraversalByColumn:8: error: not found: value setPose
        setPose(0,getY()+1)
        ^TraversalByColumn:9: error: overloaded method value writeMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
        writeMessage()
        ^TraversalByColumn:2: error: type mismatch;
 found   : Unit
 required: Boolean
    while ((getX()!=getWorldWidth()) && getY()==getWorldHeight()){
    ^